--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Heroku Test</title>
+  <title>James Proctor</title>
 </head>
 <body>
-  <h1>How's it going baby!!!</h1>
+  <h1>Deployment Test</h1>
+  <img src="https://imgur.com/gallery/hgXj8" alt="sailing sunset" width ="400" height="700">
 </body>
 </html>
