--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
   <h1>Deployment Test</h1>
-  <img src="https://imgur.com/gallery/hgXj8" alt="sailing sunset" width ="400" height="700">
+  <img src="images/Sailing.jpeg" alt="sailing sunset">
 </body>
 </html>
