--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
   <h1>Deployment Test</h1>
-  <img src="images/Sailing.jpeg" alt="sailing sunset">
+  <img id="ship1" src="images/Sailing.jpeg" alt="sailing sunset">
 </body>
 </html>
