--- a/server/public/index.html
+++ b/server/public/index.html
@@ -10,13 +10,13 @@
 
   <div>
   <h1>Deployment Test</h1>
-  <img id="ship1" src="deployment-lab/images/Sailing.jpeg" alt="sailing sunset">
+  <img id="ship1" src="images/Sailing.jpeg" alt="sailing"/>
   </div>
   <div>
     <p class = "Para1">
       Come sail the high seas of the internet with us on our programming school at sea. Get your code and your Cod from the same place. 
     </p>
   </div>
-
+  <script src="main.js"></script>
 </body>
 </html>
