--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <link href = "styles.css" rel="stylesheet">
+  <link href = "style.css" rel="stylesheet">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -18,6 +18,6 @@
       Come sail the high seas of the internet with us on our programming school at sea. Get your code and your Cod from the same place. 
     </p>
   </div>
-  <script src="main.js"></script>
 </body>
+<script src="main.js"></script>
 </html>
