--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 
   <div>
   <h1>Deployment Test</h1>
-  <img id="ship1" src="images/Sailing.jpeg" alt="sailing"/>
+  <img id="ship1" src="images/Sailing.jpeg" alt="sailing" height = "400" width = "200"/>
   </div>
   <div>
     <p class = "Para1">
