--- a/public/index.html
+++ b/public/index.html
@@ -10,12 +10,13 @@
 <body>
 
   <div>
-  <h1>Deployment Test</h1>
+  <h1>School at Sea</h1>
   <img id="ship1" src="images/Sailing.jpeg" alt="sailing"/>
   </div>
+  <br>
   <div>
     <p class = "Para1">
-      Come sail the high seas of the internet with us on our programming school at sea. Get your code and your Cod from the same place. 
+      Come sail the high seas of the internet in our programming school aboard. Colocate your code and Cod! 
     </p>
   </div>
 </body>
