moved text to h2

--- a/public/index.html
+++ b/public/index.html
@@ -12,13 +12,14 @@
   <div>
   <h1>School at Sea</h1>
   <br>
+  <h2>Come sail the high seas of the internet in our programming school aboard. Colocate your code and Cod! </h2>
   <img id="ship1" src="images/Sailing.jpeg" alt="sailing"/>
   </div>
   <br>
   <div>
     <p class = "Para1">
       <br>
-      Come sail the high seas of the internet in our programming school aboard. Colocate your code and Cod! 
+      
     </p>
   </div>
 </body>
