--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,7 @@
 
   <div>
   <h1>School at Sea</h1>
-  <br>
-  <h2>Come sail the high seas of the internet in our programming school aboard. Colocate your code and Cod! </h2>
+  <h2>Come sail the high seas of the internet in our programming school aboard</h2>
   <img id="ship1" src="images/Sailing.jpeg" alt="sailing"/>
   </div>
   <br>
